--- a/ClassCom/package.json
+++ b/ClassCom/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-firebase/app": "^20.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
+    "expo-dev-client": "~4.0.14",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
